Correct collapsed header on mobile

--- a/src/styles/sections/_header.mobile.scss
+++ b/src/styles/sections/_header.mobile.scss
@@ -18,6 +18,17 @@
 header {
   padding: 1.25em;
 
+  transform: translateY(1em);
+
+  &.active {
+
+  }
+
+  &::after {
+    top: -1em;
+    height: calc(100% + 1em);
+  }
+
   & > .header-inner {
     & > nav {
       & > ul {
@@ -45,7 +56,7 @@ header {
   z-index: 99;
 
   &.collapsed {
-    transform: translateY(-100%);
+    transform: translateY(calc(-100% - 1em));
   }
 
   & > .nav-button-container {
